fixed 'steam production, in chemical industry' linking

--- a/contribution_analysis.ipynb
+++ b/contribution_analysis.ipynb
@@ -17,9 +17,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bw.projects.set_current('exiobase_reproduce_results') #TODO choose project\n",
+    "bw.projects.set_current('GSA for oases') #TODO choose project\n",
     "co = bw.Database('CH consumption 1.0')\n",
-    "average_consump = co.search('food')[0]\n",
+    "average_consump = co.search('ch hh average consumption')[0]\n",
     "average_consump"
    ]
   },
@@ -34,13 +34,15 @@
     "    if exc['type'] != 'production':\n",
     "        list_functional_units.append({exc['input']: exc['amount']})\n",
     "        \n",
-    "list_methods = [('IPCC 2013', 'climate change', 'GTP 100a')]"
+    "list_methods = [('IPCC 2013', 'climate change', 'GWP 100a')]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "%%time\n",
@@ -123,23 +125,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%time\n",
-    "list_methods = [('IPCC 2013', 'climate change', 'GTP 100a')]\n",
-    "sectors = [act for act in co if 'sector' in act[\"name\"]]\n",
-    "list_fus = []\n",
-    "for act in sectors:\n",
-    "    list_fus.append({act: 1})\n",
-    "    \n",
-    "bw.calculation_setups['sector_contribution_analysis'] = {'inv':list_fus, 'ia':list_methods}\n",
-    "myMultiLCA = bw.MultiLCA('sector_contribution_analysis')\n",
-    "lcia_unit = bw.Method(list_methods[0]).metadata['unit']\n",
-    "fus = [bw.get_activity(list(el.keys())[0])['name'][:25] for el in list_fus]\n",
-    "df = pd.DataFrame(index=fus, columns=[lcia_unit], data=myMultiLCA.results)\n",
-    "df['units'] = [bw.get_activity(list(el.keys())[0])['unit'] for el in list_fus]\n",
-    "df.sort_values(lcia_unit, ascending=False, inplace=True)\n",
-    "\n",
-    "with pd.option_context('display.max_rows', None, 'display.max_columns', None):  # more options can be specified also\n",
-    "    print(df)"
+    "import brightway2 as bw\n",
+    "import pandas as pd\n",
+    "import plotly.graph_objects as go"
    ]
   },
   {
@@ -148,7 +136,89 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['kg CO2-Eq'].values.sum()"
+    "%%time\n",
+    "project = 'GSA for oases'\n",
+    "bw.projects.set_current(project)\n",
+    "co = bw.Database(\"CH consumption 1.0\")\n",
+    "demand_act = co.search('ch hh average consumption')\n",
+    "assert len(demand_act) == 1\n",
+    "demand = {demand_act[0]: 1}\n",
+    "list_methods = [('IPCC 2013', 'climate change', 'GWP 100a')]\n",
+    "sectors = [act for act in co if 'sector' in act[\"name\"]]\n",
+    "list_fus = []\n",
+    "for act in sectors:\n",
+    "    list_fus.append({act: 1})\n",
+    "    \n",
+    "bw.calculation_setups['sector_contribution_analysis'] = {'inv':list_fus, 'ia':list_methods}\n",
+    "myMultiLCA = bw.MultiLCA('sector_contribution_analysis')\n",
+    "lcia_unit = bw.Method(list_methods[0]).metadata['unit']\n",
+    "fus = [bw.get_activity(list(el.keys())[0])['name'][:] for el in list_fus]\n",
+    "df = pd.DataFrame(index=fus, columns=[lcia_unit], data=myMultiLCA.results)\n",
+    "df['units'] = [bw.get_activity(list(el.keys())[0])['unit'] for el in list_fus]\n",
+    "df.sort_values(lcia_unit, ascending=False, inplace=True)\n",
+    "\n",
+    "# with pd.option_context('display.max_rows', None, 'display.max_columns', None):  # more options can be specified also\n",
+    "#     print(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_plot = df.iloc[:7]\n",
+    "y = df_plot.index.values\n",
+    "y = [el.replace('sector','') for el in y]\n",
+    "y[1] = 'Housing, water, electricity, gas'\n",
+    "y[3] = 'Durable goods (computers, printers)'\n",
+    "x = df_plot['kg CO2-Eq'].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = go.Figure()\n",
+    "fig.add_trace(\n",
+    "    go.Bar(x=x,y=y,orientation='h',)\n",
+    ")\n",
+    "fig.update_layout(\n",
+    "    height=200,\n",
+    "    width=450,\n",
+    "    margin=dict(t=0,b=0,l=250,r=0),\n",
+    "    yaxis=dict(autorange=\"reversed\"),\n",
+    "    xaxis_title='LCIA scores, [kg CO2-eq]'\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig.write_image('contribution_analysis_esd.pdf')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list(sectors[8].exchanges())[1].as_dict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sectors"
    ]
   },
   {
