--- a/import_all_databases.ipynb
+++ b/import_all_databases.ipynb
@@ -44,8 +44,9 @@
     "    ei33_path = '/Users/akim/Documents/LCA_files/ecoinvent 3.3 cutoff/datasets'  \n",
     "    ex22_path = '/Users/akim/Documents/LCA_files/exiobase 2.2/mrIOT_IxI_fpa_coefficient_version2.2.2'\n",
     "    ag12_path = '/Users/akim/Documents/LCA_files/agribalyse 1.2/AGRIBALYSEv1.2_Complete.xml'\n",
+    "#     ei36_path = '/Users/akim/Documents/LCA_files/ecoinvent 3.6 cutoff/datasets'  \n",
     "    # Newer databases\n",
-    "    ei36_path = '/Users/akim/Documents/LCA_files/ecoinvent 3.6 cutoff/datasets'  \n",
+    "    ei371_path = '/Users/akim/Documents/LCA_files/ecoinvent 3.7.1 cutoff/datasets'  \n",
     "    # ex34_path = '/Users/akim/Documents/LCA_files/exiobase 3.4/IOT_2011_pxp/' #TODO\n",
     "    ag13_path = '/Users/akim/Documents/LCA_files/agribalyse 1.3/Agribalyse CSV FINAL_no links_Nov2016v3.CSV'\n",
     "    habe_path = '/Users/akim/Documents/LCA_files/HABE_2017/'\n",
@@ -63,7 +64,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### TODO -> choose project"
+    "# TODO -> choose project"
    ]
   },
   {
@@ -72,9 +73,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "project = 'GSA for oases'\n",
+    "project = 'GSA for oases ei371'\n",
     "bw.projects.set_current(project)\n",
-    "# bw.projects.delete_project(project, delete_dir=True)"
+    "# bw.projects.delete_project(project, delete_dir=True)\n",
+    "\n",
+    "ei36_name = 'ecoinvent 3.6 cutoff'\n",
+    "ei371_name = 'ecoinvent 3.7.1 cutoff'\n",
+    "ei_name = ei371_name"
    ]
   },
   {
@@ -92,9 +97,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "del bw.databases[\"CH consumption 1.0\"]\n",
-    "del bw.databases[\"Agribalyse 1.3 - ecoinvent 3.6 cutoff\"]\n",
-    "del bw.databases[\"Agribalyse 1.3 - ecoinvent 3.6 cutoff - new biosphere\"]"
+    "try:\n",
+    "#     del bw.databases[\"Agribalyse 1.3 - {} - new biosphere\".format(ei_name)]\n",
+    "#     del bw.databases[\"Agribalyse 1.3 - {}\".format(ei_name)]\n",
+    "    del bw.databases[\"CH consumption 1.0\"]\n",
+    "except:\n",
+    "    pass"
    ]
   },
   {
@@ -113,7 +121,7 @@
    "outputs": [],
    "source": [
     "%%time \n",
-    "ei36_name = 'ecoinvent 3.6 cutoff'\n",
+    "\n",
     "co_name = CONSUMPTION_DB_NAME\n",
     "\n",
     "if project == 'GSA for ecoinvent':\n",
@@ -171,17 +179,17 @@
     "    add_consumption_categories(co_name, co_path)\n",
     "    add_consumption_sectors(co_name)\n",
     "    \n",
-    "elif project == 'GSA for oases':\n",
+    "elif 'GSA for oases' in project:\n",
     "    bw.bw2setup()\n",
-    "    import_ecoinvent(ei36_path, ei36_name)\n",
+    "    import_ecoinvent(ei371_path, ei371_name)\n",
     "    # Consumption DB\n",
     "    create_ecoinvent_33_project(ei33_path)\n",
-    "    import_agribalyse_13(ag13_path, ei36_name)\n",
+    "    import_agribalyse_13(ag13_path, ei371_name)\n",
     "    exclude_dbs = [\n",
     "        'heia', \n",
     "        'EXIOBASE 2.2',\n",
     "    ]\n",
-    "    import_consumption_db(co_path, habe_path, exclude_dbs=exclude_dbs)\n",
+    "    import_consumption_db(co_path, habe_path, exclude_dbs=exclude_dbs, ei_name=ei371_name)\n",
     "    add_consumption_activities(co_name, habe_path)\n",
     "    add_consumption_categories(co_name, co_path)\n",
     "    add_consumption_sectors(co_name)"
@@ -196,7 +204,7 @@
     "co = bw.Database('CH consumption 1.0')\n",
     "act = co.search('average consumption')[0]\n",
     "demand = {act: 1}\n",
-    "method = ('IPCC 2013', 'climate change', 'GTP 100a')\n",
+    "method = ('IPCC 2013', 'climate change', 'GWP 100a')\n",
     "act"
    ]
   },
@@ -223,6 +231,92 @@
     "mc = MonteCarloLCA(demand, method)\n",
     "[next(mc) for _ in range(5)]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ecoinvent 3.4 changes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = \"/Users/akim/Downloads/correspondence_file_eiv3.3_to_eiv3.4_20170921_final.xlsx\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_raw = pd.read_excel(path, sheet_name=\"cut-off\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df_raw[13963].dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i,a in enumerate(df.values):\n",
+    "    if 'steam' in a:\n",
+    "        print(i,a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_raw.iloc[[11401,11403]][\"Unnamed: 31\"].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_raw.iloc[11401]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
