--- a/rebound.ipynb
+++ b/rebound.ipynb
@@ -36,7 +36,7 @@
     "exiobase_name = \"EXIOBASE 2.2\"\n",
     "ex = bw.Database(exiobase_name)\n",
     "methods = [\n",
-    "    ('IPCC 2013', 'climate change', 'GTP 100a'),\n",
+    "    ('IPCC 2013', 'climate change', 'GWP 100a'),\n",
     "]"
    ]
   },
@@ -191,6 +191,7 @@
    "source": [
     "%%time\n",
     "project = 'rebound'\n",
+    "bw.projects.set_current(project)\n",
     "co = bw.Database(\"CH consumption 1.0\")\n",
     "contribution_scores = {}\n",
     "i = 0\n",
@@ -215,9 +216,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filepath = write_dir / \"contribution_scores.pickle\"\n",
-    "with open(filepath, 'wb') as f:\n",
-    "    pickle.dump(contribution_scores, f)"
+    "contribution_scores2 = {k: v[methods[0]] for k,v in contribution_scores.items()}\n",
+    "contribution_scores_sorted = dict(sorted(contribution_scores2.items(), key=lambda x: x[1], reverse=True))\n",
+    "contribution_scores_sorted"
    ]
   },
   {
@@ -226,7 +227,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "contribution_scores"
+    "filepath = write_dir / \"contribution_scores.pickle\"\n",
+    "with open(filepath, 'wb') as f:\n",
+    "    pickle.dump(contribution_scores, f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Contribution analysis for sectors"
    ]
   },
   {
@@ -234,7 +244,250 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "project = 'rebound'\n",
+    "bw.projects.set_current(project)\n",
+    "co = bw.Database(\"CH consumption 1.0\")\n",
+    "list_methods = [('IPCC 2013', 'climate change', 'GWP 100a')]\n",
+    "sectors = [act for act in co if 'sector' in act[\"name\"]]\n",
+    "contribution_scores = {}\n",
+    "for act in sectors:\n",
+    "    demand = {act: 1}\n",
+    "    exio_lca = exiobaseLCA(\n",
+    "        project, \n",
+    "        demand,\n",
+    "        exiobase_scores_industry_workaround,\n",
+    "    )\n",
+    "    act_name = act[\"name\"]\n",
+    "    score = exio_lca.compute_total_scores()\n",
+    "    contribution_scores[act] = score\n",
+    "    print(score[methods[0]], act)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "contribution_scores2 = {k.as_dict()['name'].replace('sector', ''): v[methods[0]] for k,v in contribution_scores.items()}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "contribution_scores_sorted = dict(sorted(contribution_scores2.items(), key=lambda x: x[1], reverse=True))\n",
+    "contribution_scores_sorted"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filepath = write_dir / \"contribution_scores_sectors.pickle\"\n",
+    "with open(filepath, 'wb') as f:\n",
+    "    pickle.dump(contribution_scores_sorted, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list(contribution_scores_sorted.values())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = list(contribution_scores_sorted.keys())\n",
+    "y[5] = \"Furnishings, household equipment and maintenance\"\n",
+    "y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import plotly.graph_objects as go\n",
+    "fig = go.Figure([\n",
+    "    go.Bar(\n",
+    "        x=list(contribution_scores_sorted.values()), \n",
+    "        y=y, \n",
+    "        orientation='h',\n",
+    "    )\n",
+    "])\n",
+    "fig.update_yaxes(autorange=\"reversed\")\n",
+    "fig.update_xaxes(title='LCIA scores, [kg CO2-eq]')\n",
+    "fig.update_layout(\n",
+    "    width=650,\n",
+    "    height=500,\n",
+    "#     margin=dict(l=500,r=20,t=0,b=0,)\n",
+    ")\n",
+    "fig.show()\n",
+    "fig.write_image('contribution_analysis_sectors.pdf')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Contributions of specific categories"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "co = bw.Database(CONSUMPTION_DB_NAME)\n",
+    "demand_act = co.search('ch hh average consumption')\n",
+    "assert len(demand_act) == 1\n",
+    "demand_act = demand_act[0]\n",
+    "\n",
+    "purchase, transportation_services, transport_by_air, recreation, package_holidays = {}, {}, {}, {}, {}\n",
+    "purchase_name = 'Purchase and operation of vehicles'\n",
+    "transportation_services_name = \"Transportation services\"\n",
+    "transport_by_air_name = \"Passenger transport by air\"\n",
+    "recreation_name = \"Recreation and culture\"\n",
+    "package_holidays_name = \"Package holidays\"\n",
+    "for exc in demand_act.exchanges():\n",
+    "    if exc.input.get('category_middle') == purchase_name:\n",
+    "        purchase.update({\n",
+    "            exc.input: exc.amount,\n",
+    "        })\n",
+    "    if exc.input.get('category_middle') == transportation_services_name:\n",
+    "        if exc.input.get('category_fine') == transport_by_air_name:\n",
+    "            transport_by_air.update({\n",
+    "                exc.input: exc.amount,\n",
+    "            })\n",
+    "        else:\n",
+    "            transportation_services.update({\n",
+    "                exc.input: exc.amount,\n",
+    "            })\n",
+    "    if exc.input.get('category_coarse') == recreation_name:\n",
+    "        if exc.input.get('category_middle') == package_holidays_name:\n",
+    "            package_holidays.update({\n",
+    "                exc.input: exc.amount,\n",
+    "            })\n",
+    "        else:\n",
+    "            recreation.update({\n",
+    "                exc.input: exc.amount,\n",
+    "            })\n",
+    "fus = {\n",
+    "    purchase_name: purchase,\n",
+    "    transportation_services_name: transportation_services,\n",
+    "    transport_by_air_name: transport_by_air,\n",
+    "    recreation_name: recreation,\n",
+    "    package_holidays_name: package_holidays,\n",
+    "} "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "contribution_scores = {}\n",
+    "for name,demand in fus.items():\n",
+    "    exio_lca = exiobaseLCA(\n",
+    "        project, \n",
+    "        demand,\n",
+    "        exiobase_scores_industry_workaround,\n",
+    "    )\n",
+    "    score = exio_lca.compute_total_scores()\n",
+    "    exchanges = {}\n",
+    "    for exc, exc_amount in demand.items():\n",
+    "        exchanges[exc['name']] = \"{} {}\".format(exc_amount, exc.get('unit'))\n",
+    "    contribution_scores[name] = {\n",
+    "        \"LCA score\": score[methods[0]],\n",
+    "        \"Exchanges\": exchanges,\n",
+    "    }\n",
+    "    print(score[methods[0]], name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path_scores = 'write_files/contribution_scores_5categories.pickle'\n",
+    "with open(path_scores, 'wb') as f:\n",
+    "    pickle.dump(contribution_scores, f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Contribution scores, names of activities, not bw"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import brightway2 as bw\n",
+    "import pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "which_pc = \"sasha\"\n",
+    "\n",
+    "project = \"rebound\"\n",
+    "bw.projects.set_current(project)\n",
+    "methods = [\n",
+    "    ('IPCC 2013', 'climate change', 'GWP 100a'),\n",
+    "]\n",
+    "\n",
+    "path_scores = 'write_files/contribution_scores.pickle'\n",
+    "with open(path_scores, 'rb') as f:\n",
+    "    scores = pickle.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scores2 = {k.as_dict()['name']: v[methods[0]] for k,v in scores.items()}\n",
+    "scores_sorted = dict(sorted(scores2.items(), key=lambda x: x[1], reverse=True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path_scores_str = 'write_files/contribution_scores_str.pickle'\n",
+    "with open(path_scores_str, 'wb') as f:\n",
+    "    pickle.dump(scores_sorted, f)"
+   ]
   },
   {
    "cell_type": "code",
@@ -260,16 +513,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
-  },
-  "pycharm": {
-   "stem_cell": {
-    "cell_type": "raw",
-    "metadata": {
-     "collapsed": false
-    },
-    "source": []
-   }
+   "version": "3.8.5"
   },
   "pycharm": {
    "stem_cell": {
