use egg and fish from ecoinvent instead of agribalyse

--- a/import_all_databases.ipynb
+++ b/import_all_databases.ipynb
@@ -73,30 +73,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "project = 'GSA for oases'\n",
+    "# project = 'GSA for oases'\n",
+    "project = \"GSA for hybrid\"\n",
     "bw.projects.set_current(project)\n",
     "# bw.projects.delete_project(project, delete_dir=True)\n",
     "\n",
     "ei36_name = 'ecoinvent 3.6 cutoff'\n",
     "ei371_name = 'ecoinvent 3.7.1 cutoff'\n",
-    "ei_option = \"36\"\n",
+    "ei_option = \"37\"\n",
     "if ei_option == \"36\":\n",
     "    ei_name = ei36_name\n",
     "    ei_path = ei36_path\n",
     "elif ei_option == \"37\":\n",
-    "    ei_name = ei37_name\n",
-    "    ei_path = ei37_path"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "bw.databases"
+    "    ei_name = ei371_name\n",
+    "    ei_path = ei371_path"
    ]
   },
   {
@@ -198,6 +188,20 @@
     "        'EXIOBASE 2.2',\n",
     "    ]\n",
     "    import_consumption_db(co_path, habe_path, exclude_dbs=exclude_dbs, ei_name=ei_name)\n",
+    "    add_consumption_activities(co_name, habe_path)\n",
+    "    add_consumption_categories(co_name, co_path)\n",
+    "    add_consumption_sectors(co_name)\n",
+    "    \n",
+    "elif \"GSA for hybrid\" in project:\n",
+    "    bw.bw2setup()\n",
+    "    import_ecoinvent(ei_path, ei_name)\n",
+    "    import_agribalyse_13(ag13_path, ei_name)\n",
+    "    create_ecoinvent_33_project(ei33_path)\n",
+    "    exclude_dbs = [\n",
+    "        'heia', \n",
+    "        'EXIOBASE 2.2',\n",
+    "    ]\n",
+    "    import_consumption_db(co_path, habe_path, exclude_dbs=exclude_dbs)\n",
     "    add_consumption_activities(co_name, habe_path)\n",
     "    add_consumption_categories(co_name, co_path)\n",
     "    add_consumption_sectors(co_name)"
@@ -344,9 +348,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:gsa-dev]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-gsa-dev-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -358,7 +362,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.8"
   },
   "varInspector": {
    "cols": {
