linked exiobase 3.8.1 and consumption model (CH final demand shares and exchange rates)

--- a/import_all_databases.ipynb
+++ b/import_all_databases.ipynb
@@ -47,7 +47,8 @@
     "    ei36_path = '/Users/akim/Documents/LCA_files/ecoinvent 3.6 cutoff/datasets'  \n",
     "    # Newer databases\n",
     "    ei371_path = '/Users/akim/Documents/LCA_files/ecoinvent 3.7.1 cutoff/datasets'  \n",
-    "    # ex34_path = '/Users/akim/Documents/LCA_files/exiobase 3.4/IOT_2011_pxp/' #TODO\n",
+    "    ex381_path = '/Users/akim/Documents/LCA_files/exiobase_3.8.1_monetary/IOT_2015_pxp/'\n",
+    "    ex381_name = \"Exiobase 3.8.1 Monetary 2015\"\n",
     "    ag13_path = '/Users/akim/Documents/LCA_files/agribalyse 1.3/Agribalyse CSV FINAL_no links_Nov2016v3.CSV'\n",
     "    habe_path = '/Users/akim/Documents/LCA_files/HABE_2017/'\n",
     "    co_path = 'data/es8b01452_si_002.xlsx'\n",
@@ -58,17 +59,6 @@
     "    ag13_path = '/data/user/kim_a/LCA_files/agribalyse_13/Agribalyse CSV FINAL_no links_Nov2016v3.CSV'\n",
     "    habe_path = '/data/user/kim_a/LCA_files/HABE_2017'\n",
     "    co_path = 'data/es8b01452_si_002.xlsx'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Download exiobase 3.8.1 here, file \"IOT_2015_pxp.zip\": https://zenodo.org/record/4588235#.YGWXKUgzbRY\n",
-    "# import exiobase using this notebook: \n",
-    "# https://github.com/brightway-lca/brightway2-io/blob/master/dev/Exiobase%203.8%20import.ipynb"
    ]
   },
   {
@@ -84,20 +74,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# project = 'GSA for oases'\n",
     "project = \"GSA for hybrid\"\n",
     "bw.projects.set_current(project)\n",
-    "# bw.projects.delete_project(project, delete_dir=True)\n",
     "\n",
     "ei36_name = 'ecoinvent 3.6 cutoff'\n",
     "ei371_name = 'ecoinvent 3.7.1 cutoff'\n",
-    "ei_option = \"37\"\n",
+    "ei_option = \"371\"\n",
     "if ei_option == \"36\":\n",
     "    ei_name = ei36_name\n",
     "    ei_path = ei36_path\n",
-    "elif ei_option == \"37\":\n",
+    "elif ei_option == \"371\":\n",
     "    ei_name = ei371_name\n",
-    "    ei_path = ei371_path"
+    "    ei_path = ei371_path\n",
+    "    \n",
+    "ex_name = ex381_name\n",
+    "ex_path = ex381_path"
    ]
   },
   {
@@ -115,17 +106,39 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bw.databases"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Import necessary databases"
+    "### Import necessary databases\n",
+    "\n",
+    "Import of Exiobase 3 might need latest brightway 2.5 version. We recommend creating new conda environment. Until there is an official release, following packages:\n",
+    "\n",
+    "- brightway2-io\n",
+    "- brightway2-data\n",
+    "- brightway2-calc\n",
+    "- matrix_utils\n",
+    "- bw_processing\n",
+    "\n",
+    "1. cannot be conda or pip install\n",
+    "2. need to be git cloned from the respective websites, search here: https://github.com/brightway-lca\n",
+    "3. once cloned, install each of the packages with `pip install -e .` (editable install) in their directories, where setup.py is located\n",
+    "4. these packages are under active development, so make sure to pull the newest changes from time to time"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -206,13 +219,15 @@
     "elif \"GSA for hybrid\" in project:\n",
     "    bw.bw2setup()\n",
     "    import_ecoinvent(ei_path, ei_name)\n",
-    "    import_agribalyse_13(ag13_path, ei_name)\n",
     "    create_ecoinvent_33_project(ei33_path)\n",
+    "    import_exiobase_3(ex_path, ex_name)\n",
+    "#     import_agribalyse_13(ag13_path, ei_name)\n",
     "    exclude_dbs = [\n",
     "        'heia', \n",
-    "        'EXIOBASE 2.2',\n",
+    "        'Agribalyse 1.2',\n",
+    "        'Agribalyse 1.3 - {}'.format(ei_name),\n",
     "    ]\n",
-    "    import_consumption_db(co_path, habe_path, exclude_dbs=exclude_dbs)\n",
+    "    co = import_consumption_db(co_path, habe_path, exclude_dbs=exclude_dbs, ei_name=ei_name, ex_path=ex_path)\n",
     "    add_consumption_activities(co_name, habe_path)\n",
     "    add_consumption_categories(co_name, co_path)\n",
     "    add_consumption_sectors(co_name)"
@@ -225,8 +240,7 @@
    "outputs": [],
    "source": [
     "co = bw.Database('CH consumption 1.0')\n",
-    "# demand_act = co.search('average consumption')[0]\n",
-    "demand_act = [act for act in co if 'Food and non-alcoholic beverages sector' in act['name']][0]\n",
+    "demand_act = co.search('average consumption')[0]\n",
     "demand = {demand_act: 1}\n",
     "method = ('IPCC 2013', 'climate change', 'GWP 100a')\n",
     "demand_act"
@@ -251,16 +265,69 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from bw2calc import MonteCarloLCA\n",
-    "mc = MonteCarloLCA(demand, method)\n",
-    "[next(mc) for _ in range(5)]"
+    "a = co.search('tobacco')[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list(a.exchanges())"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ecoinvent 3.4 changes"
+    "# Scores for all consumption activities"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import brightway2 as bw\n",
+    "import pickle\n",
+    "from pathlib import Path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 12 ms, sys: 4.16 ms, total: 16.1 ms\n",
+      "Wall time: 21.1 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "write_dir = Path(\"write_files\")\n",
+    "\n",
+    "project = 'GSA for hybrid'\n",
+    "bw.projects.set_current(project)\n",
+    "co = bw.Database(\"CH consumption 1.0\")\n",
+    "method = ('IPCC 2013', 'climate change', 'GWP 100a')\n",
+    "contribution_scores = {}\n",
+    "i = 0\n",
+    "for act in list(co):\n",
+    "    demand = {act: 1}\n",
+    "    lca = bw.LCA(demand, method)\n",
+    "    lca.lci()\n",
+    "    lca.lcia()\n",
+    "    act_name = act[\"name\"]\n",
+    "    contribution_scores[act_name] = lca.score\n",
+    "    print(i, lca.score, act_name)\n",
+    "    i+=1"
    ]
   },
   {
@@ -269,7 +336,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "filepath = write_dir / \"contribution_scores.pickle\"\n",
+    "with open(filepath, 'wb') as f:\n",
+    "    pickle.dump(contribution_scores, f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Contribution of sectors"
    ]
   },
   {
@@ -278,7 +354,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = \"/Users/akim/Downloads/correspondence_file_eiv3.3_to_eiv3.4_20170921_final.xlsx\""
+    "%%time\n",
+    "fus = [act for act in co if 'sector' in act['name']]\n",
+    "scores = {}\n",
+    "for fu in fus:\n",
+    "    lca = bw.LCA({fu: 1}, method)\n",
+    "    lca.lci()\n",
+    "    lca.lcia()\n",
+    "    scores[fu] = lca.score"
    ]
   },
   {
@@ -287,7 +370,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_raw = pd.read_excel(path, sheet_name=\"cut-off\")"
+    "scores_str = {}\n",
+    "for fu,v in scores.items():\n",
+    "    scores_str[fu['name']] = v\n",
+    "scores_str_sorted = sorted(scores_str.items(), key=lambda x: x[1], reverse=True)\n",
+    "scores_str_sorted"
    ]
   },
   {
@@ -296,7 +383,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df_raw[13963].dropna()"
+    "path_scores = 'write_files/contribution_scores_sectors.pickle'\n",
+    "with open(path_scores, 'wb') as f:\n",
+    "    pickle.dump(scores_str_sorted, f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Contribution of specific sectors"
    ]
   },
   {
@@ -305,9 +401,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i,a in enumerate(df.values):\n",
-    "    if 'steam' in a:\n",
-    "        print(i,a)"
+    "demand_act = co.search('ch hh average consumption')\n",
+    "assert len(demand_act) == 1\n",
+    "demand_act = demand_act[0]\n",
+    "\n",
+    "purchase, transportation_services, transport_by_air, recreation, package_holidays = {}, {}, {}, {}, {}\n",
+    "purchase_name = 'Purchase and operation of vehicles'\n",
+    "transportation_services_name = \"Transportation services\"\n",
+    "transport_by_air_name = \"Passenger transport by air\"\n",
+    "recreation_name = \"Recreation and culture\"\n",
+    "package_holidays_name = \"Package holidays\"\n",
+    "for exc in demand_act.exchanges():\n",
+    "    if exc.input.get('category_middle') == purchase_name:\n",
+    "        purchase.update({\n",
+    "            exc.input: exc.amount,\n",
+    "        })\n",
+    "    if exc.input.get('category_middle') == transportation_services_name:\n",
+    "        if exc.input.get('category_fine') == transport_by_air_name:\n",
+    "            transport_by_air.update({\n",
+    "                exc.input: exc.amount,\n",
+    "            })\n",
+    "        else:\n",
+    "            transportation_services.update({\n",
+    "                exc.input: exc.amount,\n",
+    "            })\n",
+    "    if exc.input.get('category_coarse') == recreation_name:\n",
+    "        if exc.input.get('category_middle') == package_holidays_name:\n",
+    "            package_holidays.update({\n",
+    "                exc.input: exc.amount,\n",
+    "            })\n",
+    "        else:\n",
+    "            recreation.update({\n",
+    "                exc.input: exc.amount,\n",
+    "            })\n",
+    "fus = {\n",
+    "    purchase_name: purchase,\n",
+    "    transportation_services_name: transportation_services,\n",
+    "    transport_by_air_name: transport_by_air,\n",
+    "    recreation_name: recreation,\n",
+    "    package_holidays_name: package_holidays,\n",
+    "} "
    ]
   },
   {
@@ -316,7 +449,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_raw.iloc[[11401,11403]][\"Unnamed: 31\"].values"
+    "contribution_scores = {}\n",
+    "for name,demand in fus.items():\n",
+    "    lca = bw.LCA(demand, method)\n",
+    "    lca.lci()\n",
+    "    lca.lcia()\n",
+    "    exchanges = {}\n",
+    "    for exc, exc_amount in demand.items():\n",
+    "        exchanges[exc['name']] = \"{} {}\".format(exc_amount, exc.get('unit'))\n",
+    "    contribution_scores[name] = {\n",
+    "        \"LCA score\": lca.score,\n",
+    "        \"Exchanges\": exchanges,\n",
+    "    }\n",
+    "    print(lca.score, name)"
    ]
   },
   {
@@ -325,7 +470,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_raw.iloc[11401]"
+    "path_scores = 'write_files/contribution_scores_5categories.pickle'\n",
+    "with open(path_scores, 'wb') as f:\n",
+    "    pickle.dump(contribution_scores, f)"
    ]
   },
   {
@@ -333,7 +480,23 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# from bw2calc import MonteCarloLCA\n",
+    "# mc = MonteCarloLCA(demand, method)\n",
+    "# [next(mc) for _ in range(5)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Recreation and culture sector\n",
+    "# Furnishings, household equipment and routine household maintenance sector\n",
+    "# Miscellaneous goods and services sector\n",
+    "# Health"
+   ]
   },
   {
    "cell_type": "code",
