updated linking to exiobase, summed repetitive exchanges, added basic to purchaser conversion

--- a/rebound.ipynb
+++ b/rebound.ipynb
@@ -47,8 +47,8 @@
     "#     ('ReCiPe Endpoint (H,A)', 'resources', 'total'),\n",
     "#     ('ReCiPe Endpoint (H,A)', 'ecosystem quality', 'total'),\n",
     "#     ('ReCiPe Endpoint (H,A)', 'human health', 'total'),\n",
-    "    ('USEtox', 'ecotoxicity', 'total'),\n",
-    "    ('USEtox', 'human toxicity', 'total'),\n",
+    "#     ('USEtox', 'ecotoxicity', 'total'),\n",
+    "#     ('USEtox', 'human toxicity', 'total'),\n",
     "]\n",
     "methods_save_dict = {\n",
     "    ('ReCiPe Endpoint (H,A)', 'resources', 'total'): \n",
@@ -565,6 +565,20 @@
     "with open(path_scores_str, 'wb') as f:\n",
     "    pickle.dump(scores_sorted, f)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
