--- a/import_all_databases.ipynb
+++ b/import_all_databases.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,9 +16,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'local'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "with open('global_settings.json', 'rb') as f:\n",
     "    settings = json.load(f)\n",
@@ -35,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,11 +119,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Databases dictionary with 4 object(s):\n",
+       "\tExiobase 3.8.1 Monetary 2015\n",
+       "\tExiobase 3.8.1 Monetary 2015 biosphere\n",
+       "\tbiosphere3\n",
+       "\tecoinvent 3.7.1 cutoff"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "bw.databases"
+    "bw.databases\n"
    ]
   },
   {
@@ -137,11 +163,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Biosphere database already present!!! No setup is needed\n",
+      "ecoinvent 3.7.1 cutoff database already present!!! No import is needed\n",
+      "Biosphere database already present!!! No setup is needed\n",
+      "ecoinvent 3.3 cutoff database already present!!! No import is needed\n",
+      "Exiobase 3.8.1 Monetary 2015 database already present!!! No import is needed\n",
+      "--> Creating consumption_db.xlsx\n",
+      "Extracted 1 worksheets in 65.02 seconds\n",
+      "Applying strategy: csv_restore_tuples\n",
+      "Applying strategy: csv_restore_booleans\n",
+      "Applying strategy: csv_numerize\n",
+      "Applying strategy: csv_drop_unknown\n",
+      "Applying strategy: csv_add_missing_exchanges_section\n",
+      "Applying strategy: normalize_units\n",
+      "Applying strategy: normalize_biosphere_categories\n",
+      "Applying strategy: normalize_biosphere_names\n",
+      "Applying strategy: strip_biosphere_exc_locations\n",
+      "Applying strategy: set_code_by_activity_hash\n",
+      "Applying strategy: link_iterable_by_fields\n",
+      "Applying strategy: assign_only_product_as_production\n",
+      "Applying strategy: link_technosphere_by_activity_hash\n",
+      "Applying strategy: drop_falsey_uncertainty_fields_but_keep_zeros\n",
+      "Applying strategy: convert_uncertainty_types_to_integers\n",
+      "Applying strategy: convert_activity_parameters_to_list\n",
+      "Applied 16 strategies in 0.44 seconds\n",
+      "Applying strategy: link_iterable_by_fields\n",
+      "Applying strategy: link_iterable_by_fields\n",
+      "Migration for 'steam production in chemical industry' and 'market for green bell pepper'\n",
+      "Applying strategy: migrate_datasets\n",
+      "Applying strategy: migrate_exchanges\n",
+      "Applying strategy: link_iterable_by_fields\n",
+      "Applying strategy: migrate_datasets\n",
+      "Applying strategy: migrate_exchanges\n",
+      "Applying strategy: link_iterable_by_fields\n",
+      "Applying strategy: link_iterable_by_fields\n",
+      "--> Linking to Exiobase 3.8.1 Monetary 2015\n",
+      "Migration for Exiobase 3.8.1 Monetary 2015\n",
+      "Applying strategy: migrate_datasets\n",
+      "Applying strategy: migrate_exchanges\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/akim/opt/miniconda3/envs/hybr-dev-py38/lib/python3.8/site-packages/IPython/core/magics/execution.py:1321: DtypeWarning: Columns (2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,57,58,59,60,61,62,63,64,65,66,67,68,69,70,71,72,73,74,75,76,77,78,79,80,81,82,83,84,85,86,87,88,89,90,91,92,93,94,95,96,97,98,99,100,101,102,103,104,105,106,107,108,109,110,111,112,113,114,115,116,117,118,119,120,121,122,123,124,125,126,127,128,129,130,131,132,133,134,135,136,137,138,139,140,141,142,143,144,145,146,147,148,149,150,151,152,153,154,155,156,157,158,159,160,161,162,163,164,165,166,167,168,169,170,171,172,173,174,175,176,177,178,179,180,181,182,183,184,185,186,187,188,189,190,191,192,193,194,195,196,197,198,199,200,201,202,203,204,205,206,207,208,209,210,211,212,213,214,215,216,217,218,219,220,221,222,223,224,225,226,227,228,229,230,231,232,233,234,235,236,237,238,239,240,241,242,243,244,245,246,247,248,249,250,251,252,253,254,255,256,257,258,259,260,261,262,263,264,265,266,267,268,269,270,271,272,273,274,275,276,277,278,279,280,281,282,283,284,285,286,287,288,289,290,291,292,293,294,295,296,297,298,299,300,301,302,303,304,305,306,307,308,309,310,311,312,313,314,315,316,317,318,319,320,321,322,323,324,325,326,327,328,329,330,331,332,333,334,335,336,337,338,339,340,341,342,343,344) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "  exec(code, glob, local_ns)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Applying strategy: link_iterable_by_fields\n",
+      "207 datasets\n",
+      "6676 exchanges\n",
+      "0 unlinked exchanges\n",
+      "  \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Writing activities to SQLite3 database:\n",
+      "0% [##############################] 100% | ETA: 00:00:00\n",
+      "Total time elapsed: 00:00:00\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Title: Writing activities to SQLite3 database:\n",
+      "  Started: 05/17/2021 10:46:27\n",
+      "  Finished: 05/17/2021 10:46:28\n",
+      "  Total time elapsed: 00:00:00\n",
+      "  CPU %: 99.20\n",
+      "  Memory %: 1.98\n",
+      "Created database: CH consumption 1.0\n",
+      "CPU times: user 2min 2s, sys: 10.5 s, total: 2min 12s\n",
+      "Wall time: 2min 50s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time \n",
     "\n",
@@ -256,11 +370,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'ch hh average consumption aggregated' (1 month of consumption, CH, None)\n",
+      "CPU times: user 1min 16s, sys: 5.36 s, total: 1min 21s\n",
+      "Wall time: 36.5 s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1757.3456907332966"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%time\n",
+    "co = bw.Database('CH consumption 1.0')\n",
     "demand_act = co.search('average consumption aggregated')[0]\n",
     "demand = {demand_act: 1}\n",
     "method = ('IPCC 2013', 'climate change', 'GWP 100a')\n",
@@ -679,19 +814,27 @@
     "with open(fp_scores_old, 'rb') as f:\n",
     "    scores_old = pickle.load(f)\n",
     "with open(fp_exiobase_old, 'rb') as f:\n",
-    "    scores_ex22 = pickle.load(f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    scores_ex22 = pickle.load(f)\n",
+    "    \n",
     "df = pd.DataFrame.from_dict({'scores': scores, 'scores_old': scores_old})\n",
     "df['diff'] = df['scores'] - df['scores_old']\n",
     "df['diff_abs'] = abs(df['scores'] - df['scores_old'])\n",
-    "df['ratio'] = df['scores'] / df['scores_old']"
+    "df['ratio'] = df['scores'] / df['scores_old']\n",
+    "\n",
+    "bw.projects.set_current('GSA for protocol')\n",
+    "co = bw.Database('CH consumption 1.0')\n",
+    "ex = bw.Database('Exiobase 3.8.1 Monetary 2015')\n",
+    "consumption = [act for act in co if 'average consumption' in act['name']][0]\n",
+    "\n",
+    "amounts = {}\n",
+    "units = {}\n",
+    "for exc in consumption.exchanges():\n",
+    "    amounts[exc.input['name']] = exc.amount\n",
+    "    units[exc.input['name']] = exc.input['unit']\n",
+    "    \n",
+    "for i,row in df.iterrows():\n",
+    "    df.at[i,'amount from fu'] = amounts.get(row.name)\n",
+    "    df.at[i,'unit from fu'] = units.get(row.name)"
    ]
   },
   {
@@ -700,10 +843,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bw.projects.set_current('GSA for protocol')\n",
-    "co = bw.Database('CH consumption 1.0')\n",
-    "ex = bw.Database('Exiobase 3.8.1 Monetary 2015')\n",
-    "consumption = [act for act in co if 'average consumption' in act['name']][0]"
+    "df.to_excel('write_files/contribution_scores_comparison_exworkaround_ex3.xlsx')"
    ]
   },
   {
