--- a/import_all_databases.ipynb
+++ b/import_all_databases.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,6 +12,7 @@
     "\n",
     "import numpy as np\n",
     "import json, os\n",
+    "from pathlib import Path\n",
     "\n",
     "#Local files\n",
     "from import_databases import *"
@@ -19,20 +20,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'local'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "with open('global_settings.json', 'rb') as f:\n",
     "    settings = json.load(f)\n",
@@ -49,31 +39,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "if which_pc == 'local':\n",
-    "    # Older databases\n",
-    "    ei33_path = '/Users/akim/Documents/LCA_files/ecoinvent 3.3 cutoff/datasets'  \n",
-    "    ex22_path = '/Users/akim/Documents/LCA_files/exiobase_2.2/mrIOT_IxI_fpa_coefficient_version2.2.2'\n",
-    "    ag12_path = '/Users/akim/Documents/LCA_files/agribalyse 1.2/AGRIBALYSEv1.2_Complete.xml'\n",
-    "    ei36_path = '/Users/akim/Documents/LCA_files/ecoinvent 3.6 cutoff/datasets'  \n",
-    "    # Newer databases\n",
-    "    ei371_path = '/Users/akim/Documents/LCA_files/ecoinvent 3.7.1 cutoff/datasets'  \n",
-    "    ex381_path = '/Users/akim/Documents/LCA_files/exiobase_3.8.1_monetary/IOT_2015_pxp/'\n",
-    "    ex381_name = \"Exiobase 3.8.1 Monetary 2015\"\n",
-    "    sut_path = '/Users/akim/Documents/LCA_files/exiobase_SUT/data/'\n",
-    "    ag13_path = '/Users/akim/Documents/LCA_files/agribalyse 1.3/Agribalyse CSV FINAL_no links_Nov2016v3.CSV'\n",
-    "    habe_path = '/Users/akim/Documents/LCA_files/HABE_2017/'\n",
-    "    co_path = 'data/es8b01452_si_002.xlsx'\n",
+    "    path_base = Path('/Users/akim/Documents/LCA_files/')\n",
     "elif which_pc == 'merlin':\n",
-    "    ex22_path = '/data/user/kim_a/LCA_files/exiobase_22/mrIOT_IxI_fpa_coefficient_version2.2.2'\n",
-    "    ei33_path = '/data/user/kim_a/LCA_files/ecoinvent_33_cutoff/datasets'  \n",
-    "    ei36_path = '/data/user/kim_a/LCA_files/ecoinvent_36_cutoff/datasets'  \n",
-    "    ag13_path = '/data/user/kim_a/LCA_files/agribalyse_13/Agribalyse CSV FINAL_no links_Nov2016v3.CSV'\n",
-    "    habe_path = '/data/user/kim_a/LCA_files/HABE_2017'\n",
-    "    co_path = 'data/es8b01452_si_002.xlsx'"
+    "    path_base = Path('/data/user/kim_a/LCA_files/')\n",
+    "    \n",
+    "# Older databases\n",
+    "ei33_path = path_base / 'ecoinvent_33_cutoff/datasets'  \n",
+    "ex22_path = path_base / 'exiobase_22/mrIOT_IxI_fpa_coefficient_version2.2.2'\n",
+    "ag12_path = path_base / 'agribalyse_12/AGRIBALYSEv1.2_Complete.xml'\n",
+    "ei36_path = path_base / 'ecoinvent_36 cutoff/datasets'  \n",
+    "# Newer databases\n",
+    "ei371_path = path_base / 'ecoinvent_371_cutoff/datasets'  \n",
+    "ex381_path = path_base / 'exiobase_381_monetary/IOT_2015_pxp/'\n",
+    "sut_path   = path_base / 'exiobase_SUT/data/'\n",
+    "ag13_path = path_base / 'agribalyse_13/Agribalyse CSV FINAL_no links_Nov2016v3.CSV'\n",
+    "habe_path = path_base / 'HABE_2017/'\n",
+    "\n",
+    "co_path = 'data/es8b01452_si_002.xlsx'\n",
+    "ex381_name = \"Exiobase 3.8.1 Monetary 2015\""
    ]
   },
   {
@@ -85,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,23 +119,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Databases dictionary with 3 object(s):\n",
-       "\tCH consumption 1.0\n",
-       "\tbiosphere3\n",
-       "\tecoinvent 3.7.1 cutoff"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "bd.databases"
    ]
@@ -174,78 +148,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Biosphere database already present!!! No setup is needed\n",
-      "ecoinvent 3.7.1 cutoff database already present!!! No import is needed\n",
-      "Biosphere database already present!!! No setup is needed\n",
-      "ecoinvent 3.3 cutoff database already present!!! No import is needed\n",
-      "--> Creating consumption_db.xlsx\n",
-      "Extracted 1 worksheets in 5.28 seconds\n",
-      "Applying strategy: csv_restore_tuples\n",
-      "Applying strategy: csv_restore_booleans\n",
-      "Applying strategy: csv_numerize\n",
-      "Applying strategy: csv_drop_unknown\n",
-      "Applying strategy: csv_add_missing_exchanges_section\n",
-      "Applying strategy: normalize_units\n",
-      "Applying strategy: normalize_biosphere_categories\n",
-      "Applying strategy: normalize_biosphere_names\n",
-      "Applying strategy: strip_biosphere_exc_locations\n",
-      "Applying strategy: set_code_by_activity_hash\n",
-      "Applying strategy: link_iterable_by_fields\n",
-      "Applying strategy: assign_only_product_as_production\n",
-      "Applying strategy: link_technosphere_by_activity_hash\n",
-      "Applying strategy: drop_falsey_uncertainty_fields_but_keep_zeros\n",
-      "Applying strategy: convert_uncertainty_types_to_integers\n",
-      "Applying strategy: convert_activity_parameters_to_list\n",
-      "Applied 16 strategies in 0.17 seconds\n",
-      "Applying strategy: link_iterable_by_fields\n",
-      "Applying strategy: link_iterable_by_fields\n",
-      "Migration for 'steam production in chemical industry' and 'market for green bell pepper'\n",
-      "Applying strategy: migrate_datasets\n",
-      "Applying strategy: migrate_exchanges\n",
-      "Applying strategy: link_iterable_by_fields\n",
-      "Applying strategy: migrate_datasets\n",
-      "Applying strategy: migrate_exchanges\n",
-      "Applying strategy: link_iterable_by_fields\n",
-      "Applying strategy: link_iterable_by_fields\n",
-      "207 datasets\n",
-      "903 exchanges\n",
-      "0 unlinked exchanges\n",
-      "  \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Writing activities to SQLite3 database:\n",
-      "0% [##############################] 100% | ETA: 00:00:00\n",
-      "Total time elapsed: 00:00:00\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Title: Writing activities to SQLite3 database:\n",
-      "  Started: 06/02/2021 12:36:58\n",
-      "  Finished: 06/02/2021 12:36:59\n",
-      "  Total time elapsed: 00:00:00\n",
-      "  CPU %: 107.00\n",
-      "  Memory %: 1.97\n",
-      "Created database: CH consumption 1.0\n",
-      "['ch hh all consumption aggregated' (1 month of consumption, CH, None)]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "co_name = CONSUMPTION_DB_NAME\n",
     "\n",
@@ -447,29 +354,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "'Food and non-alcoholic beverages sector' (1 month of consumption, CH, None)\n",
-      "CPU times: user 11.5 s, sys: 2.07 s, total: 13.5 s\n",
-      "Wall time: 3 s\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "211.57670115335657"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%time\n",
     "co = bd.Database('CH consumption 1.0')\n",
@@ -1323,9 +1210,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:protocol-dev-py38]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-protocol-dev-py38-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1337,7 +1224,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.0"
   },
   "varInspector": {
    "cols": {
